# strider

./: .gitignore  LICENSE  README.md  compare.py  main.py  pyproject.toml
.dvc/: config
data/: frame_hashes.db.dvc
docs/json/: two_towers_extended_chapters.json  two_towers_extended_differences.json  two_towers_theatrical_chapters.json  two_towers_theatrical_differences.json
docs/sql/: identical.sql  md5.sql  size.sql
src/: algorithms.py  compare_hashes.py  hash_video.py
src/movie_edition_comparer/: algorithms.py  compare_hashes.py  hash_video.py  import_chapters.py
