[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "movie_edition_comparer"
version = "0.0.1"
authors = [
    { name = "Oliver Broomhall" },
]
description = "Compare movie editions"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "numpy==2.2.2",
    "opencv-contrib-python-headless==4.11.0.86",
    "progress==1.6",
]

[project.urls]
Homepage = "https://github.com/obroomhall/movie-edition-compare"
Issues = "https://github.com/obroomhall/movie-edition-compare/issues"

[project.scripts]
mec-hash = "src.movie_edition_comparer.hash_video"
mec-compare = "src.movie_edition_comparer.compare_hashes"